syntax = "proto3";
option java_package = "com.cmex.bolt.spot.grpc";
option java_outer_classname = "GenericResponseProto";

import "google/protobuf/any.proto";

message GenericResponse {
  sint32  code = 1;
  string  message = 2;
  optional google.protobuf.Any data = 3;
}